--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
       MYSQL_USER: laravel_user
       MYSQL_PASSWORD: laravel_pass
     command: mysqld --default-authentication-plugin=mysql_native_password
+    ports:
+    - "3306:3306"
     volumes:
       - ./docker/mysql/data:/var/lib/mysql
       - ./docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
